--- a/report_prototype.rmd
+++ b/report_prototype.rmd
@@ -25,6 +25,7 @@ library(rnoaa)
 library(xts)
 library(plotly)
 library(leaflet)
+library(dygraphs)
 
 # load data saved in the pipeline
   #tar_load(c(envdata, stan_data, model_results, spatial_outputs,model_prediction)) 
