--- a/index.Rmd
+++ b/index.Rmd
@@ -10,7 +10,7 @@ output:
 ---
 
 
-Model last updated at `r now()`.
+Model last updated at `r lubridate::now()`.
 
 ```{r, echo=F, message=F,include=F, results="hide"}
 library(targets)
@@ -23,7 +23,7 @@ library(plotly)
 library(leaflet)
 
 # load data saved in the pipeline
-tar_load(c(envdata, stan_data, model_results, spatial_outputs,model_prediction)) 
+#tar_load(c(envdata, stan_data, model_results, spatial_outputs,model_prediction)) 
 ```
 
 # Model Overview
@@ -35,7 +35,7 @@ We estimate the age of a site by calculating the years since the last fire. We t
 
 This repository was developed using the Targets framework.
 
-```{r, echo=F, eval=T, message=F, include=T, results="asis"}
+```{r, echo=F, eval=F, message=F, include=T, results="asis"}
 #tfile=paste0(tempfile(),".html")
 targets::tar_visnetwork() #%>% 
 #  htmlwidgets::saveWidget(file = tfile)
@@ -52,7 +52,7 @@ targets::tar_visnetwork() #%>%
 
 These parameters represent the relationship of the following environmental variables to the recovery trajectory.
 
-```{r p1, echo=F, eval=T, warning=F, message=FALSE}
+```{r p1, echo=F, eval=F, warning=F, message=FALSE}
 betas=model_results %>% 
   filter(type=="beta")
 
@@ -72,7 +72,7 @@ ggplotly(p1)
 
 The plot below illustrates some example recovery trajectories. It currently just shows the top 20 cells with the most observations.
 
-```{r plot, echo=F, eval=T, message=FALSE,fig.height=12}
+```{r plot, echo=F, eval=F, message=FALSE,fig.height=12}
 cells_with_long_records<-
   model_prediction %>% 
   group_by(cellID) %>% 
@@ -95,7 +95,7 @@ model_prediction %>%
 
 Maps of spatial parameters in the model.  
 
-```{r compare_data2, echo=F, eval=T, warning=F, message=FALSE}
+```{r compare_data2, echo=F, eval=F, warning=F, message=FALSE}
 rast=projectRaster(spatial_outputs,crs = "+proj=merc +a=6378137 +b=6378137 +lat_ts=0 +lon_0=0 +x_0=0 +y_0=0 +k=1 +units=m +nadgrids=@null +wktext +no_defs +type=crs")
 
 leaflet() %>% setView(lng = 18.577, lat = -33.998707, zoom = 10) %>% 
@@ -113,3 +113,38 @@ leaflet() %>% setView(lng = 18.577, lat = -33.998707, zoom = 10) %>%
 #    opacity = 1
 #  )
 ```
+
+## Park Information
+
+```{r,echo=FALSE,warning=FALSE,message=FALSE}
+
+library(gt)
+
+base_url <- "https://adamwilsonlab.github.io/emma_report/reports/"
+reports <- data.frame(report = list.files("reports/"))
+
+reports <- 
+reports %>%
+  mutate(url = paste(base_url,report,sep = ""),
+         park_name = gsub(pattern = "report.",replacement = "",x = report),
+         park_name = gsub(pattern = ".html",replacement = "",x = park_name),
+         park_name = gsub(pattern = "_",replacement = " ",x = park_name))
+
+reports %>%
+    mutate(
+        park = glue::glue("[{park_name}]({url})"),
+        park = map(park, gt::md))%>%
+  select(park)%>%
+  gt()
+
+# reports %>%
+#     mutate(
+#         report = glue::glue("[link]({url})"),
+#         report = map(report, gt::md))%>%
+#   select(park,report)%>%
+#   gt()
+
+
+
+```
+
