minor updates to text in rmd

--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "EMMA Prototype"
+title: "EMMA Report"
 description: Modeling vegetation postfire recovery data
 editor_options: 
   chunk_output_type: console
@@ -29,7 +29,7 @@ library(gt)
 
 ```
 
-# Model Overview (abridged)
+# Model Overview
 
 We estimate the age of a site by calculating the years since the last fire. We then fit a curve to model the recovery of vegetation (measured using NDVI) as a function of it's age. An additional level models the parameters of the negative exponential curve as a function of environmental variables. This means that sites with similar environmental conditions should have similar recovery curves.
 
