added a link to model detail page to index.rmd

--- a/index.Rmd
+++ b/index.Rmd
@@ -31,8 +31,7 @@ library(gt)
 
 # Model Overview
 
-We estimate the age of a site by calculating the years since the last fire. We then fit a curve to model the recovery of vegetation (measured using NDVI) as a function of it's age. An additional level models the parameters of the negative exponential curve as a function of environmental variables. This means that sites with similar environmental conditions should have similar recovery curves.
-
+We estimate the age of a site by calculating the years since the last fire. We then fit a curve to model the recovery of vegetation (measured using NDVI) as a function of it's age. An additional level models the parameters of the negative exponential curve as a function of environmental variables. This means that sites with similar environmental conditions should have similar recovery curves. More details are available <a href=https://adamwilsonlab.github.io/emma_report/model_summary.html>here.</a>
 
 # Park Information
 
